# ai-homeassistant

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .rsync-excludes  .rsync-excludes-pull  .rsync-excludes-push  .rsync-filter  .yamllint.yml  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  Makefile  Makefile.dev  README-DEV.md  README.md  opencode.json  pyproject.toml  requirements-dev.txt  setup-mac.sh  setup-windows.bat  test_reference_validator.py  test_validator_improvements.py
.agents/skills/home-assistant-automation/: SKILL.md
.agents/skills/home-assistant-backup/: SKILL.md
.agents/skills/home-assistant-debugging/: SKILL.md
.agents/skills/reflect/: SKILL.md
.claude-code/: settings.json
.claude-code/hooks/: posttooluse-ha-validation.sh  posttooluse-python-quality.sh  pretooluse-ha-push-validation.sh  run-python-quality.sh  yaml-formatter.sh  yamllint-claude-only.sh
.claude-code/plugins/home-assistant/.claude-plugin/: marketplace.json  plugin.json
.claude-code/plugins/home-assistant/skills/home-assistant-automation/: SKILL.md
.claude-code/plugins/home-assistant/skills/home-assistant-backup/: SKILL.md
.claude-code/plugins/home-assistant/skills/home-assistant-debugging/: SKILL.md
.claude-code/plugins/home-assistant/skills/learning-from-mistakes/: SKILL.md
.claude-code/plugins/home-assistant/skills/reflect/: SKILL.md
.github/workflows/: codeql.yml  test.yml
config/: automations.yaml  configuration.yaml  scenes.yaml  scripts.yaml  secrets.yaml.example
tests/: conftest.py  helpers.py  test_cache.py  test_common.py  test_duplicate_id_validator.py  test_entity_definitions.py  test_entity_explorer.py  test_entity_explorer_extended.py  test_generate_changelog.py  test_ha_api_diagnostic.py  test_ha_cli.py  test_ha_client.py  test_ha_config_validator.py  test_ha_official_validator.py  test_prune_backups.py  test_reference_validator.py  test_reference_validator_extended.py  test_reload_config.py  test_rsync_excludes.py  test_rsync_filter.py  test_run_tests.py  test_search_backups.py  test_service_validator.py  test_shim_compatibility.py  test_shims_missing.py  test_stale_sensors.py  test_template_validator.py  test_validators_imports.py  test_yaml_editor.py  test_yaml_validator.py
tests/test_commands/: test_curl.py  test_edit.py  test_entities.py  test_reload.py  test_stale_sensors_command.py  test_validate.py
tests/tools/: test_backup_common.py  test_cache.py  test_common.py  test_entity_explorer.py  test_entity_registry.py  test_generate_changelog.py  test_ha_cli.py  test_output_shape.py  test_prune_backups.py  test_reload_config.py  test_search_backups.py  test_trace.py
tests/tools/commands/: test_call.py  test_curl.py  test_edit.py  test_entities.py  test_history.py  test_logs.py  test_reload.py  test_stale_sensors.py  test_trace.py  test_validate.py
tests/tools/ha/: test_client.py  test_yaml_editor.py
tests/tools/validators/: test_base.py  test_duplicate_ids.py  test_entity_definitions.py  test_ha_official.py  test_references.py  test_services.py  test_stale_sensors.py  test_storage.py  test_templates.py  test_yaml.py
tools/: __init__.py  backup_common.py  cache.py  common.py  duplicate_id_validator.py  entity_explorer.py  entity_registry.py  generate_changelog.py  ha-curl.sh  ha_api_diagnostic.py  ha_cli.py  ha_config_validator.py  ha_official_validator.py  output_shape.py  prune_backups.py  reference_validator.py  reload_config.py  run_tests.py  search_backups.py  service_validator.py  template_validator.py  yaml_validator.py
tools/_dev/: api_diagnostic.py
tools/commands/: call.py  curl.py  edit.py  entities.py  history.py  logs.py  reload.py  stale_sensors.py  trace.py  validate.py
tools/ha/: client.py  yaml_editor.py
tools/validators/: _storage.py  _templates.py  base.py  duplicate_ids.py  entity_definitions.py  ha_official.py  references.py  services.py  stale_sensors.py  templates.py  yaml.py
