[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.hatch.build]
exclude = ["tools/_dev"]

[project]
name = "ha-config-tools"
version = "1.0.0"
description = "Home Assistant configuration management and validation tools"
authors = [
    {name = "Home Assistant Config Management"}
]
requires-python = ">=3.14.2"
dependencies = [
    "homeassistant>=2024.1.0",
    "voluptuous",
    "pyyaml>=6.0.0",
    "jsonschema",
    "requests",
    "ruamel-yaml>=0.19.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.19",
    "mypy>=2.0.0",
    "pre-commit>=3.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "config",
    "temp",
    "tools/_dev",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (undefined names, unused imports)
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax)
    "B",    # bugbear (common pitfalls)
    "SIM",  # simplify (unnecessary complexity)
]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.ruff.lint.isort]
known-first-party = ["tools"]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
# Relaxed settings for existing codebase
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_return_any = false
# Turn off strict requirements
allow_untyped_globals = true
allow_redefinition = true
# Useful warnings (but not strict)
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    "tools/_dev/",
]

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "voluptuous.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=tools",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["tools"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/tools/_dev/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.uv]
# Force patched versions over homeassistant's exact pins to resolve Dependabot alerts
override-dependencies = [
    "aiohttp>=3.14.1",
    "cryptography>=48.0.1",
    "idna>=3.15",
    "Pillow>=12.2.0",
    "PyJWT>=2.13.0",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
    "uv>=0.11.15",
    "zeroconf>=0.149.12",
]

[tool.codespell]
ignore-words-list = "hass"
